added more info howto call the 2 scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,9 @@ services:
     build: .
     env_file:
       - .env
+    environment:
+      - LLM_HOST=host.docker.internal
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    volumes:
+      - .:/app
