--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,8 @@ services:
     env_file:
       - .env
     environment:
-      - LLM_HOST=ollama-server
-    networks:
-      - ai-network
+      - LLM_HOST=host.docker.internal
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - .:/app
-
-networks:
-  ai-network:
-    external: true
-    name: ai-network
